--- a/modules/gateway/console/src/main/java/com/l7tech/console/panels/JdbcSinkPropertiesDialog.form
+++ b/modules/gateway/console/src/main/java/com/l7tech/console/panels/JdbcSinkPropertiesDialog.form
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.l7tech.console.panels.JdbcSinkPropertiesDialog">
-  <grid id="27dc6" binding="mainPanel" layout-manager="GridLayoutManager" row-count="8" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="mainPanel" layout-manager="GridLayoutManager" row-count="10" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="8" left="8" bottom="8" right="8"/>
     <constraints>
-      <xy x="20" y="20" width="519" height="331"/>
+      <xy x="20" y="20" width="519" height="346"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -11,7 +11,7 @@
       <grid id="7de57" layout-manager="GridLayoutManager" row-count="1" column-count="6" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
-          <grid row="7" column="0" row-span="1" col-span="2" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <grid row="9" column="0" row-span="1" col-span="2" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties/>
         <border type="none"/>
@@ -21,7 +21,7 @@
               <grid row="0" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="&amp;OK"/>
+              <text resource-bundle="com/l7tech/console/panels/JdbcSinkPropertiesDialog" key="okbutton.label"/>
             </properties>
           </component>
           <hspacer id="cbf9b">
@@ -34,7 +34,7 @@
               <grid row="0" column="5" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="&amp;Cancel"/>
+              <text resource-bundle="com/l7tech/console/panels/JdbcSinkPropertiesDialog" key="cancel.button.label"/>
             </properties>
           </component>
           <component id="2e621" class="javax.swing.JButton" binding="testButton" default-binding="true">
@@ -42,8 +42,8 @@
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <enabled value="false"/>
-              <text value="&amp;Test"/>
+              <enabled value="true"/>
+              <text resource-bundle="com/l7tech/console/panels/JdbcSinkPropertiesDialog" key="testbutton.label"/>
             </properties>
           </component>
           <component id="8e3da" class="javax.swing.JButton" binding="createSchemaButton" default-binding="true">
@@ -52,7 +52,7 @@
             </constraints>
             <properties>
               <enabled value="false"/>
-              <text value="Create &amp;Schema"/>
+              <text resource-bundle="com/l7tech/console/panels/JdbcSinkPropertiesDialog" key="create.schema.button.label"/>
             </properties>
           </component>
           <component id="c7b21" class="javax.swing.JButton" binding="exportSchemaButton" default-binding="true">
@@ -61,27 +61,27 @@
             </constraints>
             <properties>
               <enabled value="false"/>
-              <text value="&amp;Export Schema"/>
+              <text resource-bundle="com/l7tech/console/panels/JdbcSinkPropertiesDialog" key="export.schema.button.label"/>
             </properties>
           </component>
         </children>
       </grid>
       <vspacer id="21b2b">
         <constraints>
-          <grid row="6" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+          <grid row="8" column="0" row-span="1" col-span="1" vsize-policy="2" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
         </constraints>
       </vspacer>
       <component id="53ed5" class="javax.swing.JLabel">
         <constraints>
-          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="&amp;JDBC Connection:"/>
+          <text resource-bundle="com/l7tech/console/panels/JdbcSinkPropertiesDialog" key="connection.label"/>
         </properties>
       </component>
-      <component id="87c26" class="javax.swing.JComboBox" binding="comboBox1" default-binding="true">
+      <component id="87c26" class="javax.swing.JComboBox" binding="jdbcConnectionComboBox" default-binding="true">
         <constraints>
-          <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <model>
@@ -91,56 +91,99 @@
       </component>
       <component id="f5d50" class="javax.swing.JButton" binding="manageJDBCConnectionsButton" default-binding="true">
         <constraints>
-          <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="&amp;Manage JDBC Connections"/>
+          <text resource-bundle="com/l7tech/console/panels/JdbcSinkPropertiesDialog" key="manage.connections.label"/>
         </properties>
       </component>
       <component id="e8d96" class="javax.swing.JCheckBox" binding="fallbackToInternalConnectionCheckBox" default-binding="true">
         <constraints>
-          <grid row="5" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="7" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <enabled value="false"/>
-          <text value="&amp;Fallback to internal connection on failure"/>
+          <text resource-bundle="com/l7tech/console/panels/JdbcSinkPropertiesDialog" key="fallback.label"/>
         </properties>
       </component>
       <component id="ac896" class="javax.swing.JLabel">
         <constraints>
-          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Output:"/>
+          <text resource-bundle="com/l7tech/console/panels/JdbcSinkPropertiesDialog" key="output.label"/>
         </properties>
       </component>
       <component id="a2527" class="javax.swing.JCheckBox" binding="allAuditsCheckBox" default-binding="true">
         <constraints>
-          <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <selected value="true"/>
-          <text value="&amp;All audits"/>
+          <text resource-bundle="com/l7tech/console/panels/JdbcSinkPropertiesDialog" key="all.audits.label"/>
         </properties>
       </component>
       <component id="c605" class="javax.swing.JCheckBox" binding="metricsCheckBox" default-binding="true">
         <constraints>
-          <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="5" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <selected value="true"/>
-          <text value="Met&amp;rics"/>
+          <text resource-bundle="com/l7tech/console/panels/JdbcSinkPropertiesDialog" key="metrics.label"/>
         </properties>
       </component>
       <component id="8e53b" class="javax.swing.JCheckBox" binding="messageProcessingAuditsOnlyCheckBox" default-binding="true">
         <constraints>
-          <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="1" use-parent-layout="false"/>
+          <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="1" use-parent-layout="false"/>
         </constraints>
         <properties>
           <enabled value="false"/>
-          <text value="Message &amp;processing audits only"/>
+          <text resource-bundle="com/l7tech/console/panels/JdbcSinkPropertiesDialog" key="message.process.only.label"/>
         </properties>
       </component>
+      <component id="583bf" class="javax.swing.JCheckBox" binding="otherAuditsCheckBox" default-binding="true">
+        <constraints>
+          <grid row="6" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text resource-bundle="com/l7tech/console/panels/JdbcSinkPropertiesDialog" key="other.audits.label"/>
+        </properties>
+      </component>
+      <component id="3372f" class="javax.swing.JLabel">
+        <constraints>
+          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text resource-bundle="com/l7tech/console/panels/JdbcSinkPropertiesDialog" key="name.label"/>
+        </properties>
+      </component>
+      <grid id="b2559" layout-manager="GridLayoutManager" row-count="1" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+        <margin top="0" left="0" bottom="0" right="0"/>
+        <constraints>
+          <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties/>
+        <border type="none"/>
+        <children>
+          <component id="7d4c" class="javax.swing.JTextField" binding="nameField">
+            <constraints>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                <preferred-size width="150" height="-1"/>
+              </grid>
+            </constraints>
+            <properties/>
+          </component>
+          <component id="ef2a8" class="javax.swing.JCheckBox" binding="enableCheckbox">
+            <constraints>
+              <grid row="0" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <selected value="true"/>
+              <text resource-bundle="com/l7tech/console/panels/JdbcSinkPropertiesDialog" key="enable.label"/>
+            </properties>
+          </component>
+        </children>
+      </grid>
     </children>
   </grid>
 </form>
