--- a/modules/gateway/console/src/main/java/com/l7tech/console/panels/resources/AuditSinkGlobalPropertiesDialog.form
+++ b/modules/gateway/console/src/main/java/com/l7tech/console/panels/resources/AuditSinkGlobalPropertiesDialog.form
@@ -21,7 +21,7 @@
               <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="&amp;Cancel"/>
+              <text resource-bundle="com/l7tech/console/panels/AuditSinkGlobalPropertiesDialog" key="cancelbutton.label"/>
             </properties>
           </component>
           <hspacer id="1c0b3">
@@ -34,7 +34,7 @@
               <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="&amp;OK"/>
+              <text resource-bundle="com/l7tech/console/panels/AuditSinkGlobalPropertiesDialog" key="okbutton.label"/>
             </properties>
           </component>
         </children>
@@ -44,22 +44,22 @@
           <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
         </constraints>
       </vspacer>
-          <component id="63daa" class="javax.swing.JCheckBox" binding="cbOutputToPolicy">
-            <constraints>
+      <component id="63daa" class="javax.swing.JCheckBox" binding="cbOutputToPolicy">
+        <constraints>
           <grid row="2" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties>
-              <text value="Output audit records via audit sink &amp;policy"/>
-            </properties>
-          </component>
+        </constraints>
+        <properties>
+          <text resource-bundle="com/l7tech/console/panels/AuditSinkGlobalPropertiesDialog" key="output.to.policy.label"/>
+        </properties>
+      </component>
       <component id="d810a" class="javax.swing.JLabel">
-            <constraints>
+        <constraints>
           <grid row="0" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties>
-          <text value="Audit and metrics data will be saved to the following JDBC connections:"/>
-            </properties>
-          </component>
+        </constraints>
+        <properties>
+          <text resource-bundle="com/l7tech/console/panels/AuditSinkGlobalPropertiesDialog" key="table.label"/>
+        </properties>
+      </component>
       <scrollpane id="dcadb">
         <constraints>
           <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -73,7 +73,7 @@
           </component>
         </children>
       </scrollpane>
-      <grid id="2e53c" layout-manager="GridLayoutManager" row-count="4" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="2e53c" layout-manager="GridLayoutManager" row-count="5" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -86,7 +86,7 @@
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Add"/>
+              <text resource-bundle="com/l7tech/console/panels/AuditSinkGlobalPropertiesDialog" key="add.label"/>
             </properties>
           </component>
           <vspacer id="f5346">
@@ -94,24 +94,33 @@
               <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
             </constraints>
           </vspacer>
+          <component id="4ea12" class="javax.swing.JButton" binding="deleteButton" default-binding="true">
+            <constraints>
+              <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text resource-bundle="com/l7tech/console/panels/AuditSinkGlobalPropertiesDialog" key="delete.label"/>
+            </properties>
+          </component>
           <component id="fda56" class="javax.swing.JButton" binding="editButton" default-binding="true">
             <constraints>
               <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Edit"/>
+              <text resource-bundle="com/l7tech/console/panels/AuditSinkGlobalPropertiesDialog" key="edit.label"/>
             </properties>
           </component>
-          <component id="4ea12" class="javax.swing.JButton" binding="deleteButton" default-binding="true">
-        <constraints>
-              <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-        </constraints>
+          <component id="d7742" class="javax.swing.JButton" binding="manageDataButton" default-binding="true">
+            <constraints>
+              <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
             <properties>
-              <text value="Delete"/>
+              <enabled value="false"/>
+              <text resource-bundle="com/l7tech/console/panels/AuditSinkGlobalPropertiesDialog" key="manage.data.label"/>
             </properties>
           </component>
-    </children>
-  </grid>
+        </children>
+      </grid>
     </children>
   </grid>
   <buttonGroups>
